# Rezeptmeister

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_halfvec_hnsw_indexes.py  dd2c268a7fd1_add_re_embed_jobs_table.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  collection.py  image.py  job.py  meal_plan.py  recipe.py  shopping.py  user.py
backend/app/routers/: admin.py  ai.py  embed.py  images.py  import_router.py  ocr.py  search.py  web_search.py
backend/app/services/: _utils.py  ai_service.py  embedding_service.py  ocr_service.py  url_import_service.py
backend/tests/: conftest.py  test_embed_routes.py  test_embedding_service.py  test_live_gemini.py  test_ocr_service.py
db/: init.sql  seed.sql
frontend/: README.md  drizzle.config.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  vercel.json
frontend/drizzle/: 0000_blushing_whistler.sql  0001_add_fts_search.sql  0002_famous_puma.sql  0003_unique_shopping_list_items.sql
frontend/public/: sw.js
frontend/scripts/: generate-pwa-icons.ts
frontend/src/: auth.ts  proxy.ts
frontend/tests/: phase-1.spec.ts  phase-10.spec.ts  phase-11.spec.ts  phase-12.spec.ts  phase-13.spec.ts  phase-14.spec.ts  phase-15.spec.ts  phase-16.spec.ts  phase-17.spec.ts  phase-18.spec.ts  phase-1b-drizzle-auth.spec.ts  phase-2.spec.ts  phase-3.spec.ts  phase-4.spec.ts  phase-5.spec.ts  phase-6.spec.ts  (+3 more)
tasks/: todo.md
(+157 files in other folders)
